--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   * Assets: kenney.nl: https://www.kenney.nl/assets/micro-roguelike
   * Sounds:
     * 8-bitmusicandsfx (coin)
+
+todo:
+- stairs up/down (store location)
+- amulet
+- tweak monster generation
+- floor layouts
+- puzzles?
   
 -->
 <html>
