--- a/index.html
+++ b/index.html
@@ -29,20 +29,30 @@ todo:
     }
 
     body{ 
-      background: #222323;
+      background: #121313;
+    }
+
+    html, body {
+      margin: 0px;
+      padding: 0px;
+      height: 100%;
     }
 
     canvas {
       background: #222323;
-      border: 1px solid #ccc;
+      border: 4px solid #333;
       border-radius: 25px;
       /* background: #472D3C; */
     }
 
     #main {
-      margin: 50px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      /* margin: 50px auto;
       width: 832px;
-      height: 576px;
+      height: 576px; */
     }
   </style>
 </head>
