--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 todo:
 - stairs up/down (store location)
-- amulet
+- items?
 - tweak monster generation
 - floor layouts
 - puzzles?
-  
+- purpose?
 -->
 <html>
 
