--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ todo:
     'title': 4,
     'win': 5,
   }
-  tileSize = 64;
-  numTiles = 9;
+  tileSize = 32;//64;
+  numTiles = 18;//9;
   uiWidth = 4;
   level = 1;
   upLevel = 6;
