testing normal HP

--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@ todo:
   upLevel = 6;
   numLevels = 6;
   maxHP = 6;
-  startingHP = 100;//3;
+  startingHP = 3; 
+  // startingHP = 100;
   asciiMode = false;
 
   shakeAmount = 0;
