--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@ todo:
   spriteSize = 16;
   spritesheet = new Image();
   // spritesheet.src = "kenney-microroguelike/Tilemap/colored_tilemap_packed.png"
-  spritesheet.src = 'colored_transparent_packed.png';
+  // spritesheet.src = 'colored_transparent_packed.png';
+  spritesheet.src = 'colored_packed.png';
+  // spritesheet.src = 'monochrome_packed.png';
   spritesheet.onload = showTitle;
 
   gameState = STATES.loading;
