--- a/index.html
+++ b/index.html
@@ -347,6 +347,8 @@ todo:
 
   gameState = STATES.loading;
 
+  let currentExitPosition = null; // TBD - remove for game manager
+
   let MOVE_KEYS = {
     'left': ["a", "h"],
     'right': ["d", "l"],
