--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@ todo:
       height: 576px; */
     }
 
+    #controls {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      background: #000;
+      padding: 5px;
+      display: block;
+    }
+    #controls input,#controls label {
+      display: inline;
+
+    }
+    #controls label {
+      color: #fff;
+      margin-right: 5px;
+    }
+
 
     /* https://codepen.io/Mamboleoo/pen/BxMQYQ */
     .background span {
@@ -310,7 +327,11 @@ todo:
   <div id="main">
     <canvas></canvas>
   </div>
+  <div id="controls">
+    <label>Disable audio</label><input type="checkbox" id="disableAudio" name="disableAudio" />
+  </div>
 </body>
+
 <script>
   // canvas.width = tileSize * (numTiles + uiWidth);
   // canvas.height = tileSize * numTiles;
